discussion/kv_engine/133513/133513_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-36956: Move CB3ExecutorPool to own files

Move the CB3ExecutorPool class from executorpool.{cc,h} to it's own
cb3_executorpool.{cc,h} files.

Change-Id: Ie7287f7d941e060e5a83938ff82052a56c1a8dd4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-07-30 12:28:13.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-30 12:40:41.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25425/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/executorpool.h:169:17:
error: no type named "mutex" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25425/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3597/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorpool.cc:152:24: warning: use nullptr [modernize-use-nullptr]
                return NULL;
                       ^~~~
                       nullptr
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorpool.cc:680:9: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
        char statname[80] = {0};
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorpool.cc:731:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    char statname[80] = {0};
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorpool.cc:802:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    char statname[80] = {0};
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorpool.cc:803:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    char prefix[] = "ep_tasks";
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorpool.h:83:1: warning: use "using" instead of "typedef" [modernize-use-using]
typedef std::vector<CB3ExecutorThread*> ThreadQ;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
using ThreadQ = std::vector<CB3ExecutorThread *>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorpool.h:84:1: warning: use "using" instead of "typedef" [modernize-use-using]
typedef std::pair<ExTask, TaskQueue*> TaskQpair;
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorpool.h:85:1: warning: use "using" instead of "typedef" [modernize-use-using]
typedef std::vector<TaskQueue*> TaskQ;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
using TaskQ = std::vector<TaskQueue *>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorpool.h:234:13: warning: prefer using "override" or (rarely) "final" instead of "virtual" [modernize-use-override]
    virtual ~CB3ExecutorPool();
    ~~~~~~~~^
                               override
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/executorpool.h:169:17: error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
    static std::mutex initGuard;
                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3597/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/executorpool.h:169:17:
error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3597/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29373/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\cb3_executorpool.h(257): error C3646: "_adjustWorkers": unknown override specifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29373/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3966/ : FAILURE

Compile error at [2020-07-30T12:30:20.084Z] ../kv_engine/engines/ep/benchmarks/executor_bench.cc:86:9:
error: no member named "RelaxedAtomic" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3966/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4853/ : FAILURE

Compile error at [2020-07-30T12:32:49.853Z] ../kv_engine/engines/ep/src/executorpool.h:169:17:
error: ?mutex? in namespace ?std? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4853/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5037/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4937/ : FAILURE

Compile error at [2020-07-30T12:30:34.675Z] ../kv_engine/engines/ep/src/executorpool.h:169:17:
error: ?mutex? in namespace ?std? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4937/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12753/ : FAILURE

Compile error at [2020-07-30T12:30:39.254Z] ../kv_engine/engines/ep/src/executorpool.h:169:17:
error: ?mutex? in namespace ?std? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12753/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2112/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
